# IPtable-Controller-Installer

./: .gitignore  LICENSE  README.md  installer.md  main.py  main.spec  pyproject.toml
.github/workflows/: deploy.yml
src/: config.py  constant.py  env.py  master.py  slave.py
src/dependencies/: base.py
src/helper/: backend.py  frontend.py  mongo.py  project.py
src/interface/: config.py
