[tool.poetry]
name = "iptable-controller-installer"
version = "0.1.0"
description = "IPC-System-Installer"
authors = ["fan9704 <cxz123499@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
rich = "^13.7.1"
pyinstaller = "^6.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
